crates/haneul-core/src/authority/snapshots/haneul_core__authority__execution_time_estimator__tests__execution_time_observer_v83.snap
---
source: crates/haneul-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 83
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 7
          - secs: 0
            nanos: 5000000
        - - 8
          - secs: 0
            nanos: 10000000
        - - 5
          - secs: 0
            nanos: 26000000
        - - 4
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 2
          - secs: 0
            nanos: 49000000
        - - 9
          - secs: 0
            nanos: 49000000
        - - 9
          - secs: 0
            nanos: 45000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 49000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 48000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 48000000
  - - TransferObjects
    - observations:
        - - 9
          - secs: 0
            nanos: 84000000
        - - 1
          - secs: 0
            nanos: 38000000
        - - 4
          - secs: 0
            nanos: 84000000
        - - 7
          - secs: 0
            nanos: 90000000
      stake_weighted_median:
        secs: 0
        nanos: 84000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
        - - 7
          - secs: 0
            nanos: 717000000
      stake_weighted_median:
        secs: 0
        nanos: 717000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 386000000
        - - 5
          - secs: 0
            nanos: 468000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 468000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 4
          - secs: 0
            nanos: 364000000
        - - 2
          - secs: 0
            nanos: 61000000
        - - 0
          - ~
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 364000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 468000000
  - - mixed_move_calls
    - secs: 0
      nanos: 832000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 412000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 252000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 192000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 196000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 125000000
  - - mixed_commands
    - secs: 0
      nanos: 349000000
  - - upgrade_package
    - secs: 0
      nanos: 717000000
